# CG-Lab

./: .gitignore  README.md  pyproject.toml
src/Work0/: README.md
src/Work1/: README.md  __init__.py  main.py
src/Work2/: README.md  __init__.py  main.py
src/Work3/: README.md  main.py
src/Work4/: README.md  main.py
src/Work5/: README.md  main.py
src/Work6/: README.md  main.py
src/Work7/: README.md  main.py
