[project]
name = "cg-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "taichi>=1.7.4",
    "torch>=2.0.0",
    "torchvision>=0.19.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
default = false

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
